files/script/test/parse_error/var/test_var_error1.nl


def main()
{
    var string = 100U12

}
#script("test/parse_error/var/test_var_error1.nl")